--- a/Honcizek/Views/Programador/Partes/Index.cshtml
+++ b/Honcizek/Views/Programador/Partes/Index.cshtml
@@ -78,7 +78,7 @@
     </table>
     @if (!(Model.Count() > 0))
     {
-        <h2 style="text-align: center;width: 100%">A&uacute;n no hay registros</h2>
+        <h2 style="text-align: center;width: 100%">A&uacute;n no has creado ning&uacute;n parte de trabajo</h2>
     }
     <div class="float-right">
         <a asp-controller="TicketsP" asp-action="Index">
