--- a/Honcizek/Views/Shared/Administrador.cshtml
+++ b/Honcizek/Views/Shared/Administrador.cshtml
@@ -40,13 +40,13 @@
                     </span>
                 </div>
             </a>
-           <a asp-controller="Suscripciones" asp-action="IndexUsuario">
-               <div class="menu-option Suscripciones">
-                   <span>
-                       Suscripciones
-                   </span>
-               </div>
-           </a>
+            <a asp-controller="Suscripciones" asp-action="IndexUsuario">
+                <div class="menu-option Suscripciones">
+                    <span>
+                        Suscripciones
+                    </span>
+                </div>
+            </a>
             <a asp-controller="Trabajadores" asp-action="Index">
                 <div class="menu-option Trabajadores">
                     <span>
@@ -56,12 +56,15 @@
             </a>
 
         </aside>
-            <section>
-                @RenderBody()
-            </section>
+        <section>
+            @RenderBody()
+        </section>
         <footer class="border-top footer text-muted ">
             <div class="container">
-                <span class="float-right">&copy; 2021 - Honcizek - Todos los derechos reservados</span>
+                <form class="float-right pb-1" asp-controller="Login" asp-action="Logout" method="post">
+                    <button class="btn btn-danger">Cerrar sesión</button>
+                </form>
+                <span class="float-left">&copy; 2021 - Honcizek - Todos los derechos reservados</span>
             </div>
         </footer>
     </div>
