--- a/Honcizek/Views/Administrador/Escritorio.cshtml
+++ b/Honcizek/Views/Administrador/Escritorio.cshtml
@@ -8,7 +8,7 @@
 }
 <h1>Bienvenido al escritorio, @ViewData["nombre"]</h1>
 
-<div class="row col-12 p-5">
+<div class="row col-12 p-5 big">
     <div class="col-3">
         <div class="card card-custom card-stretch gutter-b bg-success">
             <div class="card-body">
@@ -46,7 +46,41 @@
         </div>
     </div>
 </div>
-
-<form class="pt-4" asp-controller="Login" asp-action="Logout" method="post">
-    <button class="btn btn-danger">Cerrar sesión</button>
-</form>
+<div class="row col-12 p-5 little">
+    <div class="col-12">
+        <div class="card card-custom card-stretch gutter-b bg-success">
+            <div class="card-body">
+                <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
+                    @((int)ViewData["proyectos"] > 0 ? "Participas en "+ViewData["proyectos"] : "No participas en ningún ")
+                </span>
+                <a asp-controller="ProyectosP" asp-action="Index">
+                    @((int)ViewData["proyectos"] > 1 ? "proyectos":"proyecto")
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="col-12">
+        <div class="card card-custom card-stretch gutter-b bg-warning">
+            <div class="card-body">
+                <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
+                    @((int)ViewData["tickets"] > 0 ? "Tienes " + ViewData["tickets"] : "No tienes ningún ")
+                </span>
+                <a asp-controller="TicketsP" asp-action="IndexUsuario">
+                    @((int)ViewData["tickets"] > 1 ? "tickets pendientes" : "ticket pendiente")
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="col-12">
+        <div class="card card-custom card-stretch gutter-b bg-primary">
+            <div class="card-body">
+                <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
+                    @((int)ViewData["suscripciones"] > 0 ? "Participas en " + ViewData["suscripciones"] : "No participas en ninguna ")
+                </span>
+                <a class="honci-link" asp-controller="SuscripcionesP" asp-action="Index">
+                    @((int)ViewData["suscripciones"] > 1 ? "suscripciones" : "suscripción")
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
