--- a/Honcizek/Views/Programador/Trabajos/Index.cshtml
+++ b/Honcizek/Views/Programador/Trabajos/Index.cshtml
@@ -6,12 +6,10 @@
 
 <h1>Listado de @((bool)ViewData["general"] ? "":"mis") trabajos</h1>
 
-<p class="float-left">
+<p class="float-lg-right">
     <a asp-action="Create" asp-route-id="@ViewData["proyecto_id"]">
         <button class="btn btn-info">Crear nuevo</button>
     </a>
-</p>
-<p class="float-lg-right">
     <a asp-controller="ProyectosP" asp-action="Edit" asp-route-id="@ViewData["proyecto_id"]">
         <button class="btn btn-primary">
             Volver al proyecto
@@ -59,12 +57,13 @@
                                 @(item.AgenteId != (int)ViewData["usuario_id"] ? "Ver":"Editar")
                             </button>
                         </a>
-                        @if (item.AgenteId == (int)ViewData["usuario_id"]) { 
-                        <a asp-action="Delete" asp-route-id="@item.Id">
-                            <button class="btn btn-danger">
-                                Eliminar
-                            </button>
-                        </a>
+                        @if (item.AgenteId == (int)ViewData["usuario_id"])
+                        {
+                            <a asp-action="Delete" asp-route-id="@item.Id">
+                                <button class="btn btn-danger">
+                                    Eliminar
+                                </button>
+                            </a>
                         }
                     </td>
                 </tr>
@@ -72,3 +71,14 @@
         }
     </tbody>
 </table>
+@if (!(Model.Count() > 0))
+{
+    <h2 style="text-align: center;width: 100%">@(!(bool)ViewData["general"]?"No tienes trabajos en este proyecto":"Este proyecto no tiene trabajos")</h2>
+}
+<div class="float-right">
+    <a asp-controller="ProyectosP" asp-action="Index">
+        <button class="btn btn-secondary">
+            Volver al listado de proyectos
+        </button>
+    </a>
+</div>
