--- a/Honcizek/Views/Shared/Cliente.cshtml
+++ b/Honcizek/Views/Shared/Cliente.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Honcizek</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/Administrador.css" />
+    <link rel="stylesheet" href="~/css/Cliente.css" />
 </head>
 <body>
     <header>
@@ -16,55 +16,34 @@
             </a>
 
         </div>
-        <div class="rest-header"></div>
+        <div class="rest-header bg-danger w-100 h-100">
+            <ul class="horizontal h-100">
+                <li><a asp-controller="Cliente" asp-action="Escritorio">Inicio</a></li>
+                <li><a asp-controller="ProyectosC" asp-action="Index" >Proyectos</a></li>
+                <li><a asp-controller="SuscripcionesC" asp-action="Index">Suscripciones</a></li>
+                @*<li><a href="javascript:void(0)">About</a></li>*@
+                <li class="float-right pt-1 pr-1"><form class="float-right pb-1" asp-controller="LoginC" asp-action="Logout" method="post">
+    <button class="btn btn-danger">Cerrar sesión</button>
+</form></li>
+            </ul>
+        </div>
     </header>
     <div class="d-flex main">
-        <aside class="d-flex flex-column">
-            <a asp-controller="Clientes" asp-action="Index">
-                <div class="menu-option Clientes">
-                    <span>
-                        Clientes
-                    </span>
-                </div>
-            </a>
-            <a asp-controller="Proyectos" asp-action="IndexUsuario">
-                <div class="menu-option Proyectos">
-                    <span>Proyectos</span>
-                </div>
-            </a>
-
-            <a asp-controller="Tickets" asp-action="IndexUsuario">
-                <div class="menu-option Tickets">
-                    <span>
-                        Tickets
-                    </span>
-                </div>
-            </a>
-           <a asp-controller="Suscripciones" asp-action="IndexUsuario">
-               <div class="menu-option Suscripciones">
-                   <span>
-                       Suscripciones
-                   </span>
-               </div>
-           </a>
-            <a asp-controller="Trabajadores" asp-action="Index">
-                <div class="menu-option Trabajadores">
-                    <span>
-                        Trabajadores
-                    </span>
-                </div>
-            </a>
-
-        </aside>
+       @* <aside class="d-flex flex-column">
+        </aside>*@
             <section>
+                <div class="section">
+
                 @RenderBody()
+                </div>
             </section>
+    </div>
         <footer class="border-top footer text-muted ">
             <div class="container">
-                <span class="float-right">&copy; 2021 - Honcizek - Todos los derechos reservados</span>
+                
+                <span class="float-left">&copy; 2021 - Honcizek - Todos los derechos reservados</span>
             </div>
         </footer>
-    </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
