--- a/Honcizek/Views/Cliente/Escritorio.cshtml
+++ b/Honcizek/Views/Cliente/Escritorio.cshtml
@@ -8,46 +8,92 @@
 }
 <h1>Bienvenido al escritorio, @ViewData["nombre"]</h1>
 
-<div class="row col-12 p-5">
+<div class="row col-12 p-5 big botones-escritorio">
     <div class="col-3">
-        <div class="card card-custom card-stretch gutter-b bg-success">
-            <div class="card-body">
-                <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
-                    @((int)ViewData["proyectos"] > 0 ? "Participas en "+ViewData["proyectos"] : "No participas en ningún ")
-                </span>
-                <a asp-controller="ProyectosP" asp-action="Index">
-                    @((int)ViewData["proyectos"] > 1 ? "proyectos":"proyecto")
-                </a>
+        <a asp-controller="ProyectosP" asp-action="Index">
+            <div class="card card-custom card-stretch gutter-b bg-success">
+                <div class="card-body">
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
+                        @((int)ViewData["proyectos"] > 0 ? "Posees "+ViewData["proyectos"] : "No participas en ningún ")
+                    </span>
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
+                        @((int)ViewData["proyectos"] > 1 ? "proyectos":"proyecto")
+                    </span>
+                </div>
             </div>
-        </div>
-    </div>
-    @ViewData["hola"]
-    <div class="col-3">
-        <div class="card card-custom card-stretch gutter-b bg-warning">
-            <div class="card-body">
-                <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
-                    @((int)ViewData["tickets"] > 0 ? "Tienes " + ViewData["tickets"] : "No tienes ningún ")
-                </span>
-                <a asp-controller="TicketsP" asp-action="Index">
-                    @((int)ViewData["tickets"] > 1 ? "tickets pendientes" : "ticket pendiente")
-                </a>
-            </div>
-        </div>
+        </a>
     </div>
     <div class="col-3">
-        <div class="card card-custom card-stretch gutter-b bg-primary">
-            <div class="card-body">
-                <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
-                    @((int)ViewData["suscripciones"] > 0 ? "Participas en " + ViewData["suscripciones"] : "No participas en ninguna ")
-                </span>
-                <a class="honci-link" asp-controller="SuscripcionesP" asp-action="Index">
+        <a asp-controller="TicketsP" asp-action="Index">
+            <div class="card card-custom card-stretch gutter-b bg-warning">
+                <div class="card-body">
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
+                        @((int)ViewData["tickets"] > 0 ? "Tienes " + ViewData["tickets"] : "No tienes ningún ")
+                    </span>
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white link">
+                        @((int)ViewData["tickets"] > 1 ? "tickets pendientes" : "ticket pendiente")
+                    </span>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-3">
+        <a class="honci-link" asp-controller="SuscripcionesP" asp-action="Index">
+            <div class="card card-custom card-stretch gutter-b bg-primary">
+                <div class="card-body">
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
+                    @((int)ViewData["suscripciones"] > 0 ? "Posees " + ViewData["suscripciones"] : "No posees ninguna ")
+                    </span>
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white link">
                     @((int)ViewData["suscripciones"] > 1 ? "suscripciones" : "suscripción")
-                </a>
+                    </span>
+                </div>
             </div>
-        </div>
+        </a>
     </div>
 </div>
 
-<form class="pt-4" asp-controller="LoginC" asp-action="Logout" method="post">
-    <button class="btn btn-danger">Cerrar sesión</button>
-</form>
+<div class="row col-12 p-5 little botones-escritorio">
+    <div class="col-12">
+        <a asp-controller="ProyectosP" asp-action="Index">
+            <div class="card card-custom card-stretch gutter-b bg-success">
+                <div class="card-body">
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
+                        @((int)ViewData["proyectos"] > 0 ? "Posees "+ViewData["proyectos"] : "No participas en ningún ")
+                    </span>
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
+                        @((int)ViewData["proyectos"] > 1 ? "proyectos":"proyecto")
+                    </span>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-12">
+        <a asp-controller="TicketsP" asp-action="Index">
+            <div class="card card-custom card-stretch gutter-b bg-warning">
+                <div class="card-body">
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
+                        @((int)ViewData["tickets"] > 0 ? "Tienes " + ViewData["tickets"] : "No tienes ningún ")
+                    </span>
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white link">
+                        @((int)ViewData["tickets"] > 1 ? "tickets pendientes" : "ticket pendiente")
+                    </span>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-12">
+        <a class="honci-link" asp-controller="SuscripcionesP" asp-action="Index">
+            <div class="card card-custom card-stretch gutter-b bg-primary">
+                <div class="card-body">
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
+                        @((int)ViewData["suscripciones"] > 0 ? "Posees " + ViewData["suscripciones"] : "No posees ninguna ")
+                    </span>
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white link">
+                        @((int)ViewData["suscripciones"] > 1 ? "suscripciones" : "suscripción")
+                    </span>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
