Perfil y proyectos de cliente

--- a/Honcizek/Views/Cliente/Escritorio.cshtml
+++ b/Honcizek/Views/Cliente/Escritorio.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row col-12 p-5 big botones-escritorio">
     <div class="col-3">
-        <a asp-controller="ProyectosP" asp-action="Index">
+        <a asp-controller="ProyectosC" asp-action="Listado">
             <div class="card card-custom card-stretch gutter-b bg-success">
                 <div class="card-body">
                     <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
@@ -24,7 +24,7 @@
         </a>
     </div>
     <div class="col-3">
-        <a asp-controller="TicketsP" asp-action="Index">
+        <a asp-controller="TicketsC" asp-action="Listado">
             <div class="card card-custom card-stretch gutter-b bg-warning">
                 <div class="card-body">
                     <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
@@ -38,7 +38,7 @@
         </a>
     </div>
     <div class="col-3">
-        <a class="honci-link" asp-controller="SuscripcionesP" asp-action="Index">
+        <a class="honci-link" asp-controller="SuscripcionesC" asp-action="Listado">
             <div class="card card-custom card-stretch gutter-b bg-primary">
                 <div class="card-body">
                     <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
@@ -55,7 +55,7 @@
 
 <div class="row col-12 p-5 little botones-escritorio">
     <div class="col-12">
-        <a asp-controller="ProyectosP" asp-action="Index">
+        <a asp-controller="ProyectosC" asp-action="Listado">
             <div class="card card-custom card-stretch gutter-b bg-success">
                 <div class="card-body">
                     <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
@@ -69,7 +69,7 @@
         </a>
     </div>
     <div class="col-12">
-        <a asp-controller="TicketsP" asp-action="Index">
+        <a asp-controller="TicketsC" asp-action="Listado">
             <div class="card card-custom card-stretch gutter-b bg-warning">
                 <div class="card-body">
                     <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
@@ -83,7 +83,7 @@
         </a>
     </div>
     <div class="col-12">
-        <a class="honci-link" asp-controller="SuscripcionesP" asp-action="Index">
+        <a class="honci-link" asp-controller="SuscripcionesC" asp-action="Listado">
             <div class="card card-custom card-stretch gutter-b bg-primary">
                 <div class="card-body">
                     <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
