--- a/Honcizek/wwwroot/css/site.css
+++ b/Honcizek/wwwroot/css/site.css
@@ -296,3 +296,9 @@ table tbody td:last-child a {
 #filtrador input[type="button"]{
     display: inline-block;
 }
+
+@media (max-width: 790px) {
+    .mobile {
+        display:none
+    }
+}
