--- a/Honcizek/wwwroot/css/site.css
+++ b/Honcizek/wwwroot/css/site.css
@@ -302,3 +302,9 @@ table tbody td:last-child a {
         display:none
     }
 }
+@media (max-width: 880px) {
+    .mobile-suscripciones {
+        display: none;
+    }
+}
+    
