--- a/Honcizek/Views/Cliente/Suscripciones/Index.cshtml
+++ b/Honcizek/Views/Cliente/Suscripciones/Index.cshtml
@@ -90,7 +90,7 @@
                         }
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id">
+                        <a asp-action="Ver" asp-route-id="@item.Id">
                             <button class="btn btn-primary">
                                 Ver
                             </button>
