--- a/Honcizek/wwwroot/css/Administrador.css
+++ b/Honcizek/wwwroot/css/Administrador.css
@@ -101,20 +101,20 @@ section {
         height: inherit;
     }
 
-.big{
+.big {
     user-select: none;
 }
 
 .little {
-    user-select: none;
     display: none;
+    user-select: none;
 }
 
     .little div {
         padding: .5rem;
     }
 
-@media(max-width: 995px) {
+@media(max-width: 1290px) {
     .little {
         display: unset;
     }
@@ -122,7 +122,6 @@ section {
     .big {
         display: none;
     }
-
 }
 
 @media(max-width: 1358px){
@@ -134,4 +133,30 @@ section {
     .mobile-proyecto{
         display: none;
     }
+}
+.warning-bg {
+    background-color: #ffc107;
+}
+
+.success-bg {
+    background-color :#28a745;
+}
+
+.primary-bg {
+    background-color: #007bff;
+}
+.botones-escritorio a {
+    color: black;
+}
+
+    .botones-escritorio a div {
+        transition: 0.35s ease-out;
+        color: cornsilk;
+        text-shadow: 0 0 3px black;
+    }
+
+.botones-escritorio a div:hover {
+    background-color: #001059;
+    transition: 0.25s ease-in;
+        color: yellow;
 }
