--- a/Honcizek/Views/Programador/Escritorio.cshtml
+++ b/Honcizek/Views/Programador/Escritorio.cshtml
@@ -8,79 +8,91 @@
 }
 <h1>Bienvenido al escritorio, @ViewData["nombre"]</h1>
 
-<div class="row col-12 p-5 big">
+<div class="row col-12 p-5 big botones-escritorio">
     <div class="col-3">
-        <div class="card card-custom card-stretch gutter-b bg-success">
-            <div class="card-body">
-                <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
-                    @((int)ViewData["proyectos"] > 0 ? "Participas en "+ViewData["proyectos"] : "No participas en ningún ")
-                </span>
-                <a asp-controller="ProyectosP" asp-action="Index">
-                    @((int)ViewData["proyectos"] > 1 ? "proyectos":"proyecto")
-                </a>
+        <a asp-controller="ProyectosP" asp-action="@(proyectosPersonalizado ? "IndexUsuario":"Index")">
+            <div class="card card-custom card-stretch gutter-b success-bg">
+                <div class="card-body">
+                    <span class=" col-12 card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block  ">
+                        @((int)ViewData["proyectos"] > 0 ? "Participas en "+ViewData["proyectos"] : "No participas en ningún ")
+                    </span>
+                    <span class="col-12 card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block  ">
+                        @((int)ViewData["proyectos"] > 1 ? "proyectos":"proyecto")
+                    </span>
+                </div>
             </div>
-        </div>
+        </a>
     </div>
     <div class="col-3">
-        <div class="card card-custom card-stretch gutter-b bg-warning">
-            <div class="card-body">
-                <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
-                    @((int)ViewData["tickets"] > 0 ? "Tienes " + ViewData["tickets"] : "No tienes ningún ")
-                </span>
-                <a asp-controller="TicketsP" asp-action="IndexUsuario">
-                    @((int)ViewData["tickets"] > 1 ? "tickets pendientes" : "ticket pendiente")
-                </a>
+        <a asp-controller="TicketsP" asp-action="@(ticketsPersonalizado ? "IndexUsuario":"Index")">
+            <div class="card card-custom card-stretch gutter-b warning-bg">
+                <div class="card-body warning-bg">
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block">
+                        @((int)ViewData["tickets"] > 0 ? "Tienes " + ViewData["tickets"] : "No tienes ningún ")
+                    </span>
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block ">
+                        @((int)ViewData["tickets"] > 1 ? "tickets pendientes" : "ticket pendiente")
+                    </span>
+                </div>
             </div>
-        </div>
+        </a>
     </div>
     <div class="col-3">
-        <div class="card card-custom card-stretch gutter-b bg-primary">
-            <div class="card-body">
-                <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
-                    @((int)ViewData["suscripciones"] > 0 ? "Participas en " + ViewData["suscripciones"] : "No participas en ninguna ")
-                </span>
-                <a class="honci-link" asp-controller="SuscripcionesP" asp-action="Index">
-                    @((int)ViewData["suscripciones"] > 1 ? "suscripciones" : "suscripción")
-                </a>
-            </div>
+        <div class="card card-custom card-stretch gutter-b primary-bg">
+            <a class="honci-link" asp-controller="SuscripcionesP" asp-action="@(suscripcionesPersonalizado ? "IndexUsuario":"Index")">
+                <div class="card-body">
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block  ">
+                        @((int)ViewData["suscripciones"] > 0 ? "Participas en " + ViewData["suscripciones"] : "No participas en ninguna ")
+                    </span>
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block  ">
+                        @((int)ViewData["suscripciones"] > 1 ? "suscripciones" : "suscripción")
+                    </span>
+                </div>
+            </a>
         </div>
     </div>
 </div>
-<div class="row col-12 p-5 little">
+<div class="row col-12 p-5 little botones-escritorio">
     <div class="col-12">
-        <div class="card card-custom card-stretch gutter-b bg-success">
-            <div class="card-body">
-                <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
-                    @((int)ViewData["proyectos"] > 0 ? "Participas en "+ViewData["proyectos"] : "No participas en ningún ")
-                </span>
-                <a asp-controller="ProyectosP" asp-action="Index">
-                    @((int)ViewData["proyectos"] > 1 ? "proyectos":"proyecto")
-                </a>
+        <a asp-controller="ProyectosP" asp-action="@(proyectosPersonalizado ? "IndexUsuario":"Index")">
+            <div class="card card-custom card-stretch gutter-b success-bg">
+                <div class="card-body">
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block  ">
+                        @((int)ViewData["proyectos"] > 0 ? "Participas en "+ViewData["proyectos"] : "No participas en ningún ")
+                    </span>
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block  ">
+                        @((int)ViewData["proyectos"] > 1 ? "proyectos":"proyecto")
+                    </span>
+                </div>
             </div>
-        </div>
+        </a>
     </div>
     <div class="col-12">
-        <div class="card card-custom card-stretch gutter-b bg-warning">
-            <div class="card-body">
-                <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
-                    @((int)ViewData["tickets"] > 0 ? "Tienes " + ViewData["tickets"] : "No tienes ningún ")
-                </span>
-                <a asp-controller="TicketsP" asp-action="IndexUsuario">
-                    @((int)ViewData["tickets"] > 1 ? "tickets pendientes" : "ticket pendiente")
-                </a>
+        <a asp-controller="TicketsP" asp-action="@(ticketsPersonalizado ? "IndexUsuario":"Index")">
+            <div class="card card-custom card-stretch gutter-b warning-bg">
+                <div class="card-body">
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block  ">
+                        @((int)ViewData["tickets"] > 0 ? "Tienes " + ViewData["tickets"] : "No tienes ningún ")
+                    </span>
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block  ">
+                        @((int)ViewData["tickets"] > 1 ? "tickets pendientes" : "ticket pendiente")
+                    </span>
+                </div>
             </div>
-        </div>
+        </a>
     </div>
     <div class="col-12">
-        <div class="card card-custom card-stretch gutter-b bg-primary">
-            <div class="card-body">
-                <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block text-white">
-                    @((int)ViewData["suscripciones"] > 0 ? "Participas en " + ViewData["suscripciones"] : "No participas en ninguna ")
-                </span>
-                <a class="honci-link" asp-controller="SuscripcionesP" asp-action="Index">
-                    @((int)ViewData["suscripciones"] > 1 ? "suscripciones" : "suscripción")
-                </a>
+        <a class="honci-link" asp-controller="SuscripcionesP" asp-action="@(suscripcionesPersonalizado ? "IndexUsuario":"Index")">
+            <div class="card card-custom card-stretch gutter-b primary-bg">
+                <div class="card-body">
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block  ">
+                        @((int)ViewData["suscripciones"] > 0 ? "Participas en " + ViewData["suscripciones"] : "No participas en ninguna ")
+                    </span>
+                    <span class="card-title font-weight-bolder font-size-h2 mb-0 mt-6 d-block  ">
+                        @((int)ViewData["suscripciones"] > 1 ? "suscripciones" : "suscripción")
+                    </span>
+                </div>
             </div>
-        </div>
+        </a>
     </div>
 </div>
