--- a/Honcizek/Views/Administrador/Clientes/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Edit.cshtml
@@ -31,7 +31,7 @@
                 </div>
                 <div class="form-group col-4">
                     <label asp-for="LocalidadId" class="control-label">Localidad</label>
-                    <select asp-for="LocalidadId" class="form-control" asp-items="ViewBag.LocalidadId"></select>
+                    <select asp-for="LocalidadId" class="form-control"></select>
                 </div>
             </div>
             <div class="row col-12 d-none">
@@ -116,7 +116,7 @@
     <script type="text/javascript" src="~/js/Administrador/Clientes/Clientes.js"></script>
     <script>
     $(document).ready(function () {
-        Clientes.init();
+        Clientes.init("@ViewData["LocalidadId"]");
     });
     </script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial.cshtml");}
