Ahora la fase se muestra correctamente al editar un proyecto

--- a/Honcizek/Views/Administrador/Proyectos/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Edit.cshtml
@@ -156,7 +156,7 @@
         <script>
         $(document).ready(function () {
             Proyectos.init(true);
-            Progress.init("@Model.Fase");
+            Progress.init("@((string)Model.Fase)");
         });
         </script>
         @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
