--- a/Honcizek/Views/Administrador/Proyectos/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Edit.cshtml
@@ -27,6 +27,7 @@
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="Id" />
+
                 <div class="row col-12">
                     <div class="form-group col-4">
                         <label asp-for="Tipo" class="control-label"></label>
@@ -37,10 +38,13 @@
                         <input data-val="true" asp-for="Nombre" class="form-control" />
                         <span asp-validation-for="Nombre" class="text-danger"></span>
                     </div>
-                    <div class="form-group col-4 cliente-hide">
-                        <label asp-for="ClienteId" class="control-label">Cliente</label>
-                        <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
-                    </div>
+                    @if (ViewData["ClienteId"] != null)
+                    {
+                        <div class="form-group col-4 cliente-hide">
+                            <label asp-for="ClienteId" class="control-label">Cliente</label>
+                            <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
+                        </div>
+                    }
                 </div>
                 <div class="row col-12">
                     <div class="form-group col-6">
@@ -137,9 +141,17 @@
                         <span asp-validation-for="Fase" class="text-danger"></span>
                     </div>
                 </div>
-                <div class="form-group pl-3">
-                    <input type="submit" value="Guardar" class="btn btn-info" />
-                </div>
+                @if (ViewData["ClienteId"] != null)
+                {
+
+                    <div class="form-group pl-3">
+                        <input type="submit" value="Guardar" class="btn btn-info" />
+                    </div>
+                }
+                else
+                {
+                    <span class="text-danger">Parece que no hay clientes en el sistema...</span>
+                }
             </form>
             <div class="pt-3 pl-3">
                 <a asp-action="Index">
