--- a/Honcizek/Views/Programador/Partes/Index.cshtml
+++ b/Honcizek/Views/Programador/Partes/Index.cshtml
@@ -8,21 +8,34 @@
 @if (!(bool)ViewData["error"])
 {
 
-    <div class="float-right">
+<div>
+    @if ((bool)ViewData["aviso"])
+    {
+        <p class="text-danger float-left">
 
-        <p class="float-left">
+            Estas visualizando los partes de un ticket de otro programador
+        </p>
+    }
+    <p class="float-right">
+        @if (!(bool)ViewData["finalizado"])
+        {
             <a asp-action="Create" asp-route-id="@ViewData["TicketId"]">
                 <button class="btn btn-info">
                     Crear nuevo
                 </button>
             </a>
-            <a asp-controller="TicketsP" asp-action="Edit" asp-route-id="@ViewData["TicketId"]">
-                <button class="btn btn-warning">
-                    Volver al ticket
-                </button>
-            </a>
-        </p>
-    </div>
+        }
+        else
+        {
+            <span class="text-danger">Este ticket se encuentra finalizado o cancelado</span>
+        }
+        <a asp-controller="Tickets" asp-action="Edit" asp-route-id="@ViewData["TicketId"]">
+            <button class="btn btn-primary">
+                Volver al ticket
+            </button>
+        </a>
+    </p>
+</div>
     <table class="table">
         <thead>
             <tr>
